--- a/circle.yml
+++ b/circle.yml
@@ -35,8 +35,8 @@ dependencies:
     #- cp config/custom.ini /opt/circleci/php/$(phpenv global)/etc/conf.d/
 
   override:
-    - bundle install: # note ':' here
-        timeout: 180 # fail if command has no output for 3 minutes
+    #- bundle install: # note ':' here
+        #timeout: 180 # fail if command has no output for 3 minutes
         # IMPORTANT NOTE: ^^ the timeout modifier above must be
         # double indented (four spaces) from the previous line
         # we automatically cache and restore many dependencies between
