--- a/circle.yml
+++ b/circle.yml
@@ -49,7 +49,7 @@ dependencies:
 database:
   override:
     # replace CircleCI's generated database.yml
-    - cp config/database.yml.ci config/database.yml
+    #- cp config/database.yml.ci config/database.yml
     - bundle exec rake db:create db:schema:load
 
 ## Customize test commands
