--- a/circle.yml
+++ b/circle.yml
@@ -50,7 +50,7 @@ database:
   override:
     # replace CircleCI's generated database.yml
     #- cp config/database.yml.ci config/database.yml
-    - bundle exec rake db:create db:schema:load
+    #- bundle exec rake db:create db:schema:load
 
 ## Customize test commands
 test:
