--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.2.*",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "dingo/api": "1.0.x@dev",
+        "tymon/jwt-auth": "^1.0@dev",
+        "guzzlehttp/guzzle": "~6.0",
+        "lukasoppermann/http-status": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
